@@ -12,7 +12,8 @@ Investigate the restoration of new procgen rings
 Organics on Methane
 Savannah and Alpine worlds (maybe)
 Make Windwsept always have hab/never replace cat_hab1 (you pick)
-Fix math random technically always being like 0.01 off (or just switch to a better random)
+Fix math random technically always being like 0.01 off (or just switch to a better random) int stars = (int) Math.round(getNormalRandom(1, 7));
+Fix the poles on heavy clouds (maybe)
 
 W.I.P. 1.1.0   [date]
 - Minor text fixes.
